--- a/app/src/main/res/layout/activity_speech_recongnizer.xml
+++ b/app/src/main/res/layout/activity_speech_recongnizer.xml
@@ -14,16 +14,19 @@
     <TextView
         android:id="@+id/status"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="4dp"/>
 
     <TextView
         android:id="@+id/sub_status"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="4dp"/>
 
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:layout_marginTop="4dp">
 
         <TextView
             android:id="@+id/result"
